--- a/login_page.html
+++ b/login_page.html
@@ -104,7 +104,7 @@
     </a>
     <div class="container">
         <h2>Login</h2>
-        <form action="main_menu.html" method="post">
+        <form action="main_menu.html" method="get">
             <div class="form-group">
                 <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
