--- a/finished_simulation.html
+++ b/finished_simulation.html
@@ -112,7 +112,7 @@
         <div class="text-content">
             <h1>Simulation Completed!</h1>
             <p>Great job! You've successfully completed the simulation.</p>
-            <a href="test.html" class="button">Take a test</a>
+            <a href="test1.html" class="button">Take a test</a>
             <a href="simulation.html" class="button">Watch another simulation</a>
         </div>
     </div>
