--- a/signup_page.html
+++ b/signup_page.html
@@ -104,7 +104,7 @@
     </a>
     <div class="container">
         <h2>Sign Up</h2>
-        <form action="main_menu.html" method="post">
+        <form action="main_menu.html" method="get">
             <div class="form-group">
                 <input type="text" id="name" name="name" placeholder="Name" required>
             </div>
