Some consistency updates

--- a/frontpage.html
+++ b/frontpage.html
@@ -43,7 +43,7 @@
         .start-button {
             padding: 15px 30px;
             font-size: 1.5rem;
-            background: rgba(255, 255, 255, 0.771);
+            background: rgba(255, 255, 255, 0.8);
             color: rgb(22, 16, 16);
             border: 2px solid white;
             border-radius: 50px;
@@ -58,7 +58,7 @@
         .start-button:hover {
             transform: scale(1.05);
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.8);
         }
         
         .faq-button {
@@ -67,8 +67,8 @@
             left: 20px;
             width: 50px;
             height: 50px;
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
+            background: rgba(255, 255, 255, 0.8);
+            color: black;
             border: 2px solid white;
             border-radius: 50%;
             font-size: 1.5rem;
@@ -83,7 +83,7 @@
         .faq-button:hover {
             transform: scale(1.1);
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.8);
         }
     </style>
 </head>
