--- a/login_or_signup1.html
+++ b/login_or_signup1.html
@@ -35,7 +35,7 @@
             margin: 20px auto;
             padding: 15px 30px;
             font-size: 1.2rem;
-            background: rgba(255, 255, 255, 0.771);
+            background: rgba(255, 255, 255, 0.8);
             color: rgb(22, 16, 16);
             border: 2px solid white;
             border-radius: 50px;
@@ -47,15 +47,15 @@
         .button:hover {
             transform: scale(1.05);
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.8);
         }
         
-        .faq-button, .home-button {
+        .faq-button {
             position: absolute;
             width: 50px;
             height: 50px;
-            background: rgba(255, 255, 255, 0.2);
-            color: white;
+            background: rgba(255, 255, 255, 0.8);
+            color: black;
             border: 2px solid white;
             border-radius: 50%;
             font-size: 1.5rem;
@@ -66,6 +66,23 @@
             transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
             text-decoration: none;
         }
+
+	.home-button {
+	    position: absolute;
+            width: 50px;
+            height: 50px;
+            background: rgba(255, 255, 255, 0.8);
+            border: 2px solid white;
+            border-radius: 50%;
+            font-size: 1.5rem;
+	    color: black;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+            text-decoration: none;
+	}
         
         .faq-button {
             top: 20px;
@@ -80,18 +97,16 @@
         .faq-button:hover, .home-button:hover {
             transform: scale(1.1);
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.8);
         }
     </style>
 </head>
 <body>
     <a href="faq.html" class="faq-button">?</a>
-    <a href="frontpage.html" class="home-button">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
-            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-            <polyline points="9 22 9 12 15 12 15 22"></polyline>
-        </svg>
-    </a>
+    <a href="frontpage.html" class="home-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="24" height="24">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                </svg></a>
     <div class="container">
         <a href="signup_page.html" class="button">Sign Up</a>
         <a href="login_page.html" class="button">Login</a>
