overflow set to hidden

--- a/finished_test.html
+++ b/finished_test.html
@@ -18,6 +18,7 @@
             background-size: cover;
             background-attachment: fixed;
             position: relative;
+	    overflow: hidden;
         }
         
         .container {
@@ -190,7 +191,7 @@
     
     <div class="container">
         <div class="text-content">
-            <h2>You have successfully finished a test!</h2>
+            <h2>You have successfully finished the test!</h2>
             <a href="tutorial1.html" class="button">Try a tutorial</a>
                 <a href="simulation.html" class="button">Watch a simulation</a>
         </div>
