--- a/frontpage.html
+++ b/frontpage.html
@@ -19,6 +19,7 @@
             background-repeat: no-repeat;
             background-position: center 40%;
             background-size: cover;
+	    overflow: hidden;
         }
 
         .container {
