--- a/test1_correct_answer.html
+++ b/test1_correct_answer.html
@@ -18,6 +18,7 @@
             background-size: cover;
             background-attachment: fixed;
             position: relative;
+	    overflow: hidden;
         }
         
         .container {
