--- a/frontpage.html
+++ b/frontpage.html
@@ -53,7 +53,7 @@
             text-decoration: black;
             text-decoration-color: black;
             display: inline-block;
-            margin-bottom: 10vh;
+            margin-bottom: 200px;
         }
         
         .start-button:hover {
